# aki_richards

./: .gitignore  LICENSE.md  README.md  plane_wave_computation.py  pyproject.toml  streamlit_app.py  underwater.py  validate_aki_richard.py
aki_richards/: __init__.py  core.py  underwater.ipynb
sandbox/: plane_wave.py  plane_wave_equations.py
tests/: test_core.py
