[tool.poetry]
name = "aki-richards"
version = "0.1.0"
description = ""
authors = ["Alister Trabattoni <alister.trabattoni@gmail.com>"]
readme = "README.md"
packages = [{include = "aki_richards"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
matplotlib = "^3.7


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
