[tool.poetry]
name = "aki-richards"
version = "0.1.0"
description = ""
authors = ["Alister Trabattoni <alister.trabattoni@gmail.com>"]
readme = "README.md"
packages = [{include = "aki_richards"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
streamlit = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
