[tool.poetry]
name = "aki-richards"
version = "0.1.0"
description = ""
authors = ["Alister Trabattoni <alister.trabattoni@gmail.com>"]
readme = "README.md"
packages = [{include = "aki_richards"}]

[tool.poetry.dependencies]
python="^3.9.16"
streamlit = "^1.22.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
